# Mobile-platform

./: .gitignore  README.md
Platform_simulink/: optotrack_odometry_comp.slx
Platform_simulink/forward_turn/: experiment1.mat  experiment10.mat  experiment4.mat  experiment5.mat  experiment6.mat  experiment7.mat  experiment8.mat
Platform_simulink/loop/: experiment1.mat  experiment14.mat  experiment3.mat  experiment5.mat  experiment6.mat
kicad/DS2Y-S-DC24V/: DS2Y-S-DC24V.dcm  DS2Y-S-DC24V.kicad_mod  DS2Y-S-DC24V.lib  DS2Y-S-DC24V.mod
kicad/LEDs driver/: LEDs driver.kicad_pcb  LEDs driver.kicad_pro  LEDs driver.kicad_sch
kicad/relay safety board/: circuit-Edge_Cuts.gbr  circuit-F_Cu.gbr  circuit-job.gbrjob  circuit.drl  circuit.kicad_pcb  circuit.kicad_prl  circuit.kicad_pro  fp-info-cache
kicad/safety board/: safety board opamp-B_Cu.gbr  safety board opamp-Edge_Cuts.gbr  safety board opamp-job.gbrjob  safety board opamp.drl  safety board opamp.kicad_pcb  safety board opamp.kicad_prl  safety board opamp.kicad_pro  safety board opamp.kicad_sch
kicad/safety board CMOS/: circuit.kicad_pcb  circuit.kicad_pro  circuit.kicad_sch
kicad/safety board Relay/: circuit.kicad_sch
mobile_platform_ws/devel/: .catkin  .rosinstall  (+2 more)
mobile_platform_ws/src/platform_communication/: CMakeLists.txt  package.xml
mobile_platform_ws/src/platform_communication/src/: ADSCommunication.cpp
mobile_platform_ws/src/platform_joystick/: CMakeLists.txt  package.xml
mobile_platform_ws/src/platform_joystick/launch/: joystick.launch
mobile_platform_ws/src/platform_joystick/src/: joystickCmdVel.cpp
mobile_platform_ws/src/platform_lift/: CMakeLists.txt  package.xml
mobile_platform_ws/src/platform_lift/action/: MoveLift.action
mobile_platform_ws/src/platform_lift/scripts/: lift_communication.py  serial_communication.py  serial_interface.py
mobile_platform_ws/src/platform_lift/srv/: PositionLift.srv
mobile_platform_ws/src/platform_measurements/: CMakeLists.txt
mobile_platform_ws/src/platform_measurements/launch/: navigation_measurements.launch
mobile_platform_ws/src/platform_measurements/scripts/: odomUDP.py
mobile_platform_ws/src/platform_measurements/src/: sendGoal.cpp  simpleTrajectories.cpp  trajectoryMeasurements.cpp
safety designer/: Sensors.sdp2  field.sdxml
scripts/: transfertOdom.py
simulink/: analyseAll.asv  analyseAll.m  analyseData.m  analyseIndividual.m  differencePosition.m  differenceTrajectory.m  main.m  optotrack_odometry_comp.slx  prepareData.m  trajectories.m
(+181 files in other folders)
